--- a/NewsApp/Pages/NewsDetailPage.xaml
+++ b/NewsApp/Pages/NewsDetailPage.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NewsApp.Pages.NewsDetailPage"
            >
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center"/>
-    </VerticalStackLayout>
+    <Grid RowDefinitions="Auto, Auto, Auto">
+        <Image Grid.Row="0" x:Name="ImgNews" HeightRequest="300" Aspect="Fill"/>
+        <Label Grid.Row="1" x:Name="LBlTitle" Margin="10" FontSize="Title" FontAttributes="Bold"/>
+        <Label Grid.Row="1" x:Name="LBlContent" Margin="10" FontSize="Body"/>
+    </Grid>
 </ContentPage>
